# g2opy

./: .gitignore
g2o/types/sba/: CMakeLists.txt  types_direct_method.h  types_six_dof_expmap.h
python/types/: types.h
python/types/sba/: types_direct_method.h  types_six_dof_expmap.h
